order details complete

--- a/app/src/main/res/layout/single_order_layout.xml
+++ b/app/src/main/res/layout/single_order_layout.xml
@@ -48,12 +48,11 @@
         android:layout_marginLeft="5dp"
         />
     <LinearLayout
+        android:id="@+id/viewMore"
         android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-
-        android:id="@+id/viewMore">
+        android:layout_gravity="center_vertical">
         <TextView
 
             android:layout_width="wrap_content"
