--- a/app/src/main/res/layout/fragment_order_updates.xml
+++ b/app/src/main/res/layout/fragment_order_updates.xml
@@ -3,9 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.Orders.OrderFragments.TabLayoutFragments.OrderUpdates">
 
     <!-- TODO: Update blank fragment layout -->
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/orderUpdatesRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="39dp"
+        android:layout_marginTop="73dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
 
 
 </FrameLayout>
