--- a/app/src/main/res/layout/fragment_view_order_personal_shop.xml
+++ b/app/src/main/res/layout/fragment_view_order_personal_shop.xml
@@ -6,172 +6,178 @@
     android:layout_height="match_parent"
     tools:context=".UI.Orders.OrderFragments.ViewOrderPersonalShop">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="21dp"
-            android:layout_marginTop="23dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="4dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/singleOrderImage"
-                    android:layout_width="39dp"
-                    android:layout_height="39dp"
-                    android:layout_marginVertical="31dp"
-                    android:layout_marginLeft="18dp"
-                    android:src="@drawable/ic_personal_shopper" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="34dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Amazon"
-                        android:textColor="@color/black"
-                        android:textFontWeight="700"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        android:background="@drawable/order_created_radius"
-                        android:paddingHorizontal="7dp"
-                        android:paddingVertical="3dp"
-                        android:text="Order Created"
-                        android:textColor="#0073FF"
-                        android:textFontWeight="500"
-                        android:textSize="8sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="27dp"
-                    android:layout_marginRight="18dp"
-                    android:gravity="right"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="21dp"
+                    android:layout_marginTop="23dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="4dp">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical">
 
-                        <TextView
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/singleOrderImage"
+                            android:layout_width="39dp"
+                            android:layout_height="39dp"
+                            android:layout_marginVertical="31dp"
+                            android:layout_marginLeft="18dp"
+                            android:src="@drawable/ic_personal_shopper" />
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="500"
-                            android:text="Order No.:"
-                            android:textColor="@color/black"
-                            android:textSize="10sp" />
+                            android:layout_marginLeft="15dp"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Amazon"
+                                android:textColor="@color/black"
+                                android:textFontWeight="700"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="4dp"
+                                android:background="@drawable/order_created_radius"
+                                android:paddingHorizontal="7dp"
+                                android:paddingVertical="3dp"
+                                android:text="Order Created"
+                                android:textColor="#0073FF"
+                                android:textFontWeight="500"
+                                android:textSize="8sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="500"
-                            android:text=" #RNDM04312"
-                            android:textColor="@color/black"
-                            android:textSize="10sp" />
+                            android:layout_marginRight="18dp"
+                            android:gravity="right"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="500"
+                                    android:text="Order No.:"
+                                    android:textColor="@color/black"
+                                    android:textSize="10sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="500"
+                                    android:text=" #RNDM04312"
+                                    android:textColor="@color/black"
+                                    android:textSize="10sp" />
+
+                            </LinearLayout>
+
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="500"
+                                    android:text="Order Placed:"
+                                    android:textColor="@color/black"
+                                    android:textSize="10sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="500"
+                                    android:text=" 15 Dec 2020"
+                                    android:textColor="@color/black"
+                                    android:textSize="10sp" />
+
+                            </LinearLayout>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="Upload Invoice"
+                                android:textColor="#3A5FD8"
+                                android:textFontWeight="500"
+                                android:textSize="12sp" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                </androidx.cardview.widget.CardView>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="500"
-                            android:text="Order Placed:"
-                            android:textColor="@color/black"
-                            android:textSize="10sp" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/tabCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="21dp"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginBottom="27dp"
+                    app:cardCornerRadius="10dp"
+                    android:paddingBottom="34dp"
+                    app:cardElevation="4dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="500"
-                            android:text=" 15 Dec 2020"
-                            android:textColor="@color/black"
-                            android:textSize="10sp" />
 
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <com.google.android.material.appbar.AppBarLayout
+                        android:id="@+id/appBarLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Upload Invoice"
-                        android:textColor="#3A5FD8"
-                        android:textFontWeight="500"
-                        android:textSize="12sp" />
+                        android:background="@color/white">
 
-                </LinearLayout>
+                        <com.google.android.material.tabs.TabLayout
+                            android:id="@+id/viewOrderTabLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:tabIndicatorColor="#3A5FD8"
+                            app:tabIndicatorHeight="1dp"
+                            app:tabSelectedTextColor="#3A5FD8"
+                            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+                            app:tabTextColor="@color/black">
 
+                            <!--                    <com.google.android.material.tabs.TabItem-->
+                            <!--                        android:id="@+id/tab1"-->
+                            <!--                        android:layout_width="match_parent"-->
+                            <!--                        android:layout_height="wrap_content"-->
+                            <!--                        android:text="Order Details" />-->
+
+                            <!--                    <com.google.android.material.tabs.TabItem-->
+                            <!--                        android:id="@+id/tab2"-->
+                            <!--                        android:layout_width="match_parent"-->
+                            <!--                        android:layout_height="wrap_content"-->
+                            <!--                        android:text="Order Updates" />-->
+
+                        </com.google.android.material.tabs.TabLayout>
+
+                    </com.google.android.material.appbar.AppBarLayout>
+
+                    <androidx.viewpager.widget.ViewPager
+                        android:id="@+id/viewOrderViewPager"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="21dp"
-            android:layout_marginTop="28dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="4dp">
-
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appBarLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white">
-
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/viewOrderTabLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:tabIndicatorColor="#3A5FD8"
-                    app:tabIndicatorHeight="1dp"
-                    app:tabSelectedTextColor="#3A5FD8"
-                    app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-                    app:tabTextColor="@color/black">
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Order Details" />
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Order Updates" />
-
-                </com.google.android.material.tabs.TabLayout>
-
-            </com.google.android.material.appbar.AppBarLayout>
-
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewOrderViewPager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
 </FrameLayout>
