--- a/app/src/main/res/layout/fragment_first_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_first_on_boarding.xml
@@ -59,18 +59,19 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/next_btn_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginVertical="20dp"
                 android:backgroundTint="@color/button_color"
-                android:paddingVertical="13dp"
+                android:insetBottom="0dp"
+                android:insetTop="0dp"
                 android:text="Next"
                 android:textColor="@color/white"
                 android:textFontWeight="700"
                 android:textSize="24dp"
-                android:textStyle="bold"
                 app:cornerRadius="5dp"
                 app:icon="@mipmap/button_arrow"
+                app:iconTint="@color/white"
                 app:iconGravity="textEnd"
                 app:iconSize="24dp" />
 
