--- a/app/src/main/res/layout/fragment_fourth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fourth_on_boarding.xml
@@ -48,7 +48,9 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/unlock_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="25dp"
                 android:backgroundTint="@color/button_color"
@@ -57,9 +59,7 @@
                 android:textColor="@color/white"
                 android:textFontWeight="700"
                 android:textSize="24dp"
-                android:textStyle="bold"
                 app:cornerRadius="5dp"
-                android:paddingVertical="13dp"
                 android:layout_marginVertical="20dp"/>
 
         </LinearLayout>
