--- a/app/src/main/res/layout/fragment_secound_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_secound_on_boarding.xml
@@ -1,94 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.OnBoarding.SecoundOnBoarding">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="17dp"
-        android:layout_marginVertical="28dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp">
-        <LinearLayout
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="17dp"
+            android:layout_marginVertical="28dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp">
-
-    <ImageView
-        android:id="@+id/back_arrow1"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/back_arrow"
-        />
-
-
-        <TextView
-            android:id="@+id/skip2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SKIP"
-            android:textColor="@color/skipcolor"
-            android:textSize="14sp"
-            android:layout_alignParentRight="true"/>
-
-
-</RelativeLayout>
-
-
-            <ImageView
-                android:layout_width="318dp"
-                android:layout_height="318dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="22dp"
-                android:src="@mipmap/img" />
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center_horizontal"
-                android:text="@string/shop_from_1000_indian_websites_get_it_delivered_to_your_virtual_address"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textFontWeight="700"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:orientation="vertical">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/next_btn_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginVertical="20dp"
-                android:backgroundTint="@color/button_color"
-                android:paddingTop="13dp"
-                android:paddingBottom="14dp"
-                android:text="Next"
-                android:textColor="@color/white"
-                android:textFontWeight="700"
-                android:textSize="24dp"
-                android:textStyle="bold"
-                app:cornerRadius="5dp"
-                app:icon="@mipmap/button_arrow"
-                app:iconGravity="textEnd"
-                app:iconSize="24dp" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:id="@+id/back_arrow1"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/back_arrow" />
 
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/skip2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:text="SKIP"
+                        android:textColor="@color/skipcolor"
+                        android:textSize="14sp" />
+
+
+                </RelativeLayout>
+
+
+                <ImageView
+                    android:layout_width="318dp"
+                    android:layout_height="318dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="22dp"
+                    android:src="@mipmap/img" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/shop_from_1000_indian_websites_get_it_delivered_to_your_virtual_address"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textFontWeight="700"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/next_btn_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginVertical="20dp"
+                    android:backgroundTint="@color/button_color"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:text="Next"
+                    app:iconTint="@color/white"
+                    android:textColor="@color/white"
+                    android:textFontWeight="700"
+                    android:textSize="24dp"
+
+                    app:cornerRadius="5dp"
+                    app:icon="@mipmap/button_arrow"
+                    app:iconGravity="textEnd"
+                    app:iconSize="24dp" />
+
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </FrameLayout>
