--- a/app/src/main/res/layout/fragment_third_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_third_on_boarding.xml
@@ -74,17 +74,17 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/next_btn_3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginVertical="20dp"
                 android:backgroundTint="@color/button_color"
-                android:paddingTop="13dp"
-                android:paddingBottom="14dp"
+                android:insetBottom="0dp"
+                android:insetTop="0dp"
+                app:iconTint="@color/white"
                 android:text="Next"
                 android:textColor="@color/white"
                 android:textFontWeight="700"
                 android:textSize="24dp"
-                android:textStyle="bold"
                 app:cornerRadius="5dp"
                 app:icon="@mipmap/button_arrow"
                 app:iconGravity="textEnd"
