--- a/app/src/main/res/layout/view_order_single_layout.xml
+++ b/app/src/main/res/layout/view_order_single_layout.xml
@@ -37,6 +37,7 @@
                 android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/webview"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:src="@drawable/view_order_anchor"
@@ -49,6 +50,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/colorHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Color: "
@@ -133,6 +135,7 @@
             android:textSize="8sp"/>
 
         <TextView
+            android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Price Changed"
