--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -3,15 +3,11 @@
     <item
         android:id="@+id/first"
         android:icon="@android:drawable/ic_menu_search"
-        android:title="First"/>
+        android:title="Cancel this item &amp; purchase all the other"/>
     <item
         android:id="@+id/second"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="Second"/>
-    <item
-        android:id="@+id/third"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="Third">
+        android:title="Cancel all the items from this site"/>
 
-    </item>
+
 </menu>
