--- a/app/src/main/res/layout/fragment_order_updates.xml
+++ b/app/src/main/res/layout/fragment_order_updates.xml
@@ -38,6 +38,7 @@
             android:paddingBottom="24dp">
 
             <EditText
+                android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -52,6 +53,7 @@
                 app:boxStrokeColor="@color/box_background_color" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/sendBtn"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
