--- a/app/src/main/res/layout/fragment_shipping_calculator.xml
+++ b/app/src/main/res/layout/fragment_shipping_calculator.xml
@@ -83,6 +83,7 @@
 
 
                             <TextView
+                                android:id="@+id/shipFromField"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="3dp"
@@ -92,7 +93,6 @@
                                 android:text="India"
                                 android:textColor="@color/black"
                                 android:textSize="12sp" />
-
 
                             <TextView
                                 android:layout_width="wrap_content"
